plang/testing/logs/false-incorrect/66/program66.p.p
zrxQ g Os5.


r (Tqgyh) uMH s05 :- (xU (d), (fD0OD (AW) vwnE1 (YO)); n3zD J (GBx) (Mf); rh; dtcB K6WZo (fqm (S4)) (KF2Gi), dK (ooeYD) (G) E (TV1G); k (i0 (BnG) HKj (PJiuQ) NhHu), oW la; xB5 x (BJ)).
p.

eIph Yv El.
hG.
vz aRAt (PaY) (Rli).


ef (Ct) PmE.
j6 aNhx4 q s2 r :- (ms; cekD f, bYn, (dDx s G8)).
e U (c (X5A) j54 (RT) c7H) (RmFG) (nY (T8)) :- z4x (BNX) (QuE).


sw2ti :- (pQGcG (j0P (Lg) X mQ5 ywFR); xr4 (z (Uqkuz)) (LCQF), (tTuta); jlIr (VS) (gWTI xEdvL vAWrf); fAG eOVQW (mQ9oM idRk4) (cxVYr PMnlQ (IZ6T) Gn), (ea); i (aK i5IU (HC0) (CsH) j) C2YaS oKTpv; (h y13U SMH9N F3)).
bkqj z z :- ((bnr1P (L8)), j6N2X (Xv) (b (b (F9EC)) (GxPM) (t2) NF6CB), d (Gzp0O) (ZfTL) (coBo0) (yv (YvQ1v) (sKZ0 (H9J) (HVFZ8) gKz UZ1)), (kkN6 yYmG (PcD) XW6); q78 msHA); (rfH X5 (j8x5A) (IheDB) MLrsG).
pDymr VdY4 :- ((dD (V) ou Xg N81, n gB); (r, jUYC XOe L)); wVW SD8.

? jz HxdTZ (EKs) buRN.

